v1.1.9-DEV
----------------------------------------------------------------------------------------------------
 * Removed bould check from configure. Not everone building the module needs it installed. 
   Fixes #76.
 
v1.1.8
----------------------------------------------------------------------------------------------------
 * new configuration directive "MDBaseServer on|off" to allow/inhibit management of the base
   server domains outside VirtualHosts. By default, this is "off", e.g. mod_md will not manage
   certificates or perform https: redirections on the base server. This follows the 
   principle of least surprise.
 * Fixed gcc warnings.

v1.1.7
----------------------------------------------------------------------------------------------------
 * MDMustStaple was unable to create the necessary OpenSSL OBJ identifier on some platforms, 
   possibly because this fails if the OID is already configured in ```openssl.cnf```, see
   [here](https://github.com/openssl/openssl/issues/2795).
 * Two memory leaks in cert issuer and alt-names lookup eliminated by Yann Ylavic.
 * Changing MDMustStaple triggers certificate renewal.

v1.1.6
----------------------------------------------------------------------------------------------------
 * Fixing a bug when code in assert() checks is not executed.

v1.1.5
----------------------------------------------------------------------------------------------------
 * Some attempts at code readability, increased logging level for fallback cert generation that
   was swept under the DEBUG carpet before.
 * More verbosity when *not* handing out certificates, e.g. mod_ssl asks, but mod_md has no
   idea what it is talking about. Some people report misbehaviour here.
 * Re-enabled support for md_get_credentials() function that was used in older mod_ssl
   patch, so that people with old patched servers get a chance to upgrade.
 
v1.1.4