@@ -2,6 +2,8 @@ v1.1.9-DEV
 ----------------------------------------------------------------------------------------------------
  * Removed bould check from configure. Not everone building the module needs it installed. 
    Fixes #76.
+ * Test with boulder now need a mater revision >= 2018-01-10 or you will see failures in the
+   0800 tests.
  
 v1.1.8
 ----------------------------------------------------------------------------------------------------
